Downgrade most th to td

--- a/schema/templates/schema/archive_detail.html
+++ b/schema/templates/schema/archive_detail.html
@@ -3,31 +3,31 @@
 {% block content %}
 <table class="table">
   <tr>
-    <th>Archive type</th>
+    <td>Archive type</td>
     <td>{{ object.type }}</td>
   </tr>
   <tr>
-    <th>Archive name</th>
+    <td>Archive name</td>
     <td>{{ object.name }}</td>
   </tr>
   <tr>
-    <th>Max width</th>
+    <td>Max width</td>
     <td>{{ object.max_width }}</td>
   </tr>
   <tr>
-    <th>Max height</th>
+    <td>Max height</td>
     <td>{{ object.max_height }}</td>
   </tr>
   <tr>
-    <th>Location</th>
+    <td>Location</td>
     <td>{{ object.location }}</td>
   </tr>
   <tr>
-    <th>Storage</th>
+    <td>Storage</td>
     <td>{{ object.storage }}</td>
   </tr>
   <tr>
-    <th>Sealed</th>
+    <td>Sealed</td>
     <td>{{ object.sealed }}</td>
   </tr>
 </table>
