--- a/schema/templates/schema/battery_detail.html
+++ b/schema/templates/schema/battery_detail.html
@@ -3,19 +3,19 @@
 {% block content %}
 <table class="table">
   <tr>
-    <th>Battery name</th>
+    <td>Battery name</td>
     <td>{{ object.name }}</td>
   </tr>
   <tr>
-    <th>Voltage</th>
+    <td>Voltage</td>
     <td>{{ object.voltage }}</td>
   </tr>
   <tr>
-    <th>Chemistry</th>
+    <td>Chemistry</td>
     <td>{{ object.chemistry }}</td>
   </tr>
   <tr>
-    <th>Other names</th>
+    <td>Other names</td>
     <td>{{ object.other_names }}</td>
   </tr>
 </table>
