--- a/schema/templates/schema/camera_detail.html
+++ b/schema/templates/schema/camera_detail.html
@@ -5,59 +5,59 @@
 
 <table class="table">
     <tr>
-        <th>Acquired</th>
+        <td>Acquired</td>
         <td>{{ object.acquired }}</td>
     </tr>
     <tr>
-        <th>Cost</th>
+        <td>Cost</td>
         <td>{{ object.cost }}</td>
     </tr>
     <tr>
-        <th>Serial</th>
+        <td>Serial</td>
         <td>{{ object.serial }}</td>
     </tr>
     <tr>
-        <th>Datecode</th>
+        <td>Datecode</td>
         <td>{{ object.datecode }}</td>
     </tr>
     <tr>
-        <th>Manufactured</th>
+        <td>Manufactured</td>
         <td>{{ object.manufactured }}</td>
     </tr>
     <tr>
-        <th>Own</th>
+        <td>Own</td>
         <td>{{ object.own }}</td>
     </tr>
     <tr>
-        <th>Lens</th>
+        <td>Lens</td>
         <td>{{ object.lens }}</td>
     </tr>
     <tr>
-        <th>Notes</th>
+        <td>Notes</td>
         <td>{{ object.notes }}</td>
     </tr>
     <tr>
-        <th>Lost</th>
+        <td>Lost</td>
         <td>{{ object.lost }}</td>
     </tr>
     <tr>
-        <th>Lost price</th>
+        <td>Lost price</td>
         <td>{{ object.lost_price }}</td>
     </tr>
     <tr>
-        <th>Source</th>
+        <td>Source</td>
         <td>{{ object.source }}</td>
     </tr>
     <tr>
-        <th>Condition</th>
+        <td>Condition</td>
         <td>{{ object.condition }}</td>
     </tr>
     <tr>
-        <th>Condition notes</th>
+        <td>Condition notes</td>
         <td>{{ object.condition_notes }}</td>
     </tr>
     <tr>
-        <th>Display lens</th>
+        <td>Display lens</td>
         <td>{{ object.display_lens }}</td>
     </tr>
 </table>
