--- a/schema/templates/schema/format_detail.html
+++ b/schema/templates/schema/format_detail.html
@@ -3,11 +3,11 @@
 {% block content %}
 <table class="table">
   <tr>
-    <th>Film format</th>
+    <td>Film format</td>
     <td>{{ object.format }}</td>
   </tr>
   <tr>
-    <th>Negative size</th>
+    <td>Negative size</td>
     <td>{{ object.negative_size.all|join:", " }}</td>
   </tr>
 </table>
