--- a/schema/templates/schema/negativesize_detail.html
+++ b/schema/templates/schema/negativesize_detail.html
@@ -3,27 +3,27 @@
 {% block content %}
 <table class="table">
   <tr>
-    <th>Name</th>
+    <td>Name</td>
     <td>{{ object.name }}</td>
   </tr>
   <tr>
-    <th>Width</th>
+    <td>Width</td>
     <td>{{ object.width }}</td>
   </tr>
   <tr>
-    <th>Height</th>
+    <td>Height</td>
     <td>{{ object.height }}</td>
   </tr>
   <tr>
-    <th>Crop factor</th>
+    <td>Crop factor</td>
     <td>{{ object.crop_factor }}</td>
   </tr>
   <tr>
-    <th>Area</th>
+    <td>Area</td>
     <td>{{ object.area }}</td>
   </tr>
   <tr>
-    <th>Aspect ratio</th>
+    <td>Aspect ratio</td>
     <td>{{ object.aspect_ratio }}</td>
   </tr>
 </table>
