--- a/schema/templates/schema/person_detail.html
+++ b/schema/templates/schema/person_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 <table class="table">
   <tr>
-    <th>Name</th>
+    <td>Name</td>
     <td>{{ object.name }}</td>
   </tr>
 </table>
