--- a/schema/templates/schema/print_detail.html
+++ b/schema/templates/schema/print_detail.html
@@ -3,83 +3,83 @@
 {% block content %}
 <table class="table">
   <tr>
-    <th>Negative</th>
+    <td>Negative</td>
     <td>{% if object.negative %}<a href="{% url 'negative-detail' object.negative.id %}">{{ object.negative }}</a>{% endif %}</td>
   </tr>
   <tr>
-    <th>Date</th>
+    <td>Date</td>
     <td>{{ object.date }}</td>
   </tr>
   <tr>
-    <th>Paperstock</th>
+    <td>Paperstock</td>
     <td>{% if object.paper_stock %}<a href="{% url 'paper_stock-detail' object.paper_stock.id %}">{{ object.paper_stock }}</a>{% endif %}</td>
   </tr>
   <tr>
-    <th>Height</th>
+    <td>Height</td>
     <td>{{ object.height }}</td>
   </tr>
   <tr>
-    <th>Width</th>
+    <td>Width</td>
     <td>{{ object.width }}</td>
   </tr>
   <tr>
-    <th>Aperture</th>
+    <td>Aperture</td>
     <td>{{ object.aperture }}</td>
   </tr>
   <tr>
-    <th>Exposure time</th>
+    <td>Exposure time</td>
     <td>{{ object.exposure_time }}</td>
   </tr>
   <tr>
-    <th>Filtration grade</th>
+    <td>Filtration grade</td>
     <td>{{ object.filtration_grade }}</td>
   </tr>
   <tr>
-    <th>Development time</th>
+    <td>Development time</td>
     <td>{{ object.development_time }}</td>
   </tr>
   <tr>
-    <th>Toner</th>
+    <td>Toner</td>
     <td>{{ object.toner.all|join:", " }}</td>
   </tr>
   <tr>
-    <th>Own</th>
+    <td>Own</td>
     <td>{{ object.own }}</td>
   </tr>
   <tr>
-    <th>Location</th>
+    <td>Location</td>
     <td>{{ object.location }}</td>
   </tr>
   <tr>
-    <th>Sold price</th>
+    <td>Sold price</td>
     <td>{{ object.sold_price }}</td>
   </tr>
   <tr>
-    <th>Enlarger</th>
+    <td>Enlarger</td>
     <td>{{ object.enlarger }}</td>
   </tr>
   <tr>
-    <th>Enlarger lens</th>
+    <td>Enlarger lens</td>
     <td>{{ object.lens }}</td>
   </tr>
   <tr>
-    <th>Developer</th>
+    <td>Developer</td>
     <td>{% if object.developer %}<a href="{% url 'developer-detail' object.developer.id %}">{{ object.developer }}</a>{% endif %}</td>
   </tr>
   <tr>
-    <th>Fine</th>
+    <td>Fine</td>
     <td>{{ object.fine }}</td>
   </tr>
   <tr>
-    <th>Notes</th>
+    <td>Notes</td>
     <td>{{ object.notes }}</td>
   </tr>
   <tr>
-    <th>Archive</th>
+    <td>Archive</td>
     <td>{% if object.archive %}<a href="{% url 'archive-detail' object.archive.id %}">{{ object.archive }}</a>{% endif %}</td>
   </tr>
   <tr>
-    <th>Printer</th>
+    <td>Printer</td>
     <td>{{ object.printer }}</td>
   </tr>
 </table>
