--- a/schema/templates/schema/process_detail.html
+++ b/schema/templates/schema/process_detail.html
@@ -3,15 +3,15 @@
 {% block content %}
 <table class="table">
   <tr>
-    <th>Process name</th>
+    <td>Process name</td>
     <td>{{ object.name }}</td>
   </tr>
   <tr>
-    <th>Colour</th>
+    <td>Colour</td>
     <td>{{ object.colour }}</td>
   </tr>
   <tr>
-    <th>Positive</th>
+    <td>Positive</td>
     <td>{{ object.positive }}</td>
   </tr>
 </table>
