--- a/schema/templates/schema/bulkfilm_detail.html
+++ b/schema/templates/schema/bulkfilm_detail.html
@@ -3,33 +3,33 @@
 {% block content %}
 <table class="table">
   <tr>
-    <th>Film format</th>
+    <td>Film format</td>
     <td>{% if object.format %}<a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a>{% endif %}
     </td>
   </tr>
   <tr>
-    <th>Filmstock</th>
+    <td>Filmstock</td>
     <td>{% if object.filmstock %}<a
         href="{% url 'filmstock-detail' object.filmstock.id %}">{{ object.filmstock }}</a>{% endif %}</td>
   </tr>
   <tr>
-    <th>Purchase date</th>
+    <td>Purchase date</td>
     <td>{{ object.purchase_date }}</td>
   </tr>
   <tr>
-    <th>Cost</th>
+    <td>Cost</td>
     <td>{{ object.cost }}</td>
   </tr>
   <tr>
-    <th>Source</th>
+    <td>Source</td>
     <td>{{ object.source }}</td>
   </tr>
   <tr>
-    <th>Batch code</th>
+    <td>Batch code</td>
     <td>{{ object.batch }}</td>
   </tr>
   <tr>
-    <th>Expiry date</th>
+    <td>Expiry date</td>
     <td>{{ object.expiry }}</td>
   </tr>
 </table>
