--- a/schema/templates/schema/developer_detail.html
+++ b/schema/templates/schema/developer_detail.html
@@ -3,23 +3,23 @@
 {% block content %}
 <table class="table">
   <tr>
-    <th>Manufacturer</th>
+    <td>Manufacturer</td>
     <td>{% if object.manufacturer %}<a href="{% url 'manufacturer-detail' object.manufacturer.id %}">{{ object.manufacturer }}</a>{% endif %}</td>
   </tr>
   <tr>
-    <th>Name</th>
+    <td>Name</td>
     <td>{{ object.name }}</td>
   </tr>
   <tr>
-    <th>For paper</th>
+    <td>For paper</td>
     <td>{{ object.for_paper }}</td>
   </tr>
   <tr>
-    <th>For film</th>
+    <td>For film</td>
     <td>{{ object.for_film }}</td>
   </tr>
   <tr>
-    <th>Chemistry</th>
+    <td>Chemistry</td>
     <td>{{ object.chemistry }}</td>
   </tr>
 </table>
