--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -3,145 +3,145 @@
 {% block content %}
 <table class="table">
   <tr>
-    <th>Disambiguation</th>
+    <td>Disambiguation</td>
     <td>{{ object.disambiguation }}</td>
   </tr>
   <tr>
-    <th>Manufacturer</th>
+    <td>Manufacturer</td>
     <td>{% if object.manufacturer %}<a
         href="{% url 'manufacturer-detail' object.manufacturer.id %}">{{ object.manufacturer }}</a>{% endif %}</td>
   </tr>
   <tr>
-    <th>Model</th>
+    <td>Model</td>
     <td>{{ object.model }}</td>
   </tr>
   <tr>
-    <th>Mount</th>
+    <td>Mount</td>
     <td>{% if object.mount %}<a href="{% url 'mount-detail' object.mount.id %}">{{ object.mount }}</a>{% endif %}</td>
   </tr>
   <tr>
-    <th>Zoom</th>
+    <td>Zoom</td>
     <td>{{ object.zoom }}</td>
   </tr>
   <tr>
-    <th>Min focal length</th>
+    <td>Min focal length</td>
     <td>{{ object.min_focal_length }}</td>
   </tr>
   <tr>
-    <th>Max focal length</th>
+    <td>Max focal length</td>
     <td>{{ object.max_focal_length }}</td>
   </tr>
   <tr>
-    <th>Closest focus</th>
+    <td>Closest focus</td>
     <td>{{ object.closest_focus }}</td>
   </tr>
   <tr>
-    <th>Maximum aperture</th>
+    <td>Maximum aperture</td>
     <td>{{ object.max_aperture }}</td>
   </tr>
   <tr>
-    <th>Minimum aperture</th>
+    <td>Minimum aperture</td>
     <td>{{ object.min_aperture }}</td>
   </tr>
   <tr>
-    <th>Elements</th>
+    <td>Elements</td>
     <td>{{ object.elements }}</td>
   </tr>
   <tr>
-    <th>Groups</th>
+    <td>Groups</td>
     <td>{{ object.groups }}</td>
   </tr>
   <tr>
-    <th>Weight</th>
+    <td>Weight</td>
     <td>{{ object.weight }}</td>
   </tr>
   <tr>
-    <th>Nominal min angle diagonal</th>
+    <td>Nominal min angle diagonal</td>
     <td>{{ object.nominal_min_angle_diag }}</td>
   </tr>
   <tr>
-    <th>Nominal max angle diagonal</th>
+    <td>Nominal max angle diagonal</td>
     <td>{{ object.nominal_max_angle_diag }}</td>
   </tr>
   <tr>
-    <th>Aperture blades</th>
+    <td>Aperture blades</td>
     <td>{{ object.aperture_blades }}</td>
   </tr>
   <tr>
-    <th>Autofocus</th>
+    <td>Autofocus</td>
     <td>{{ object.autofocus }}</td>
   </tr>
   <tr>
-    <th>Filter thread</th>
+    <td>Filter thread</td>
     <td>{{ object.filter_thread }}</td>
   </tr>
   <tr>
-    <th>Maximum magnification</th>
+    <td>Maximum magnification</td>
     <td>{{ object.magnification }}</td>
   </tr>
   <tr>
-    <th>URL</th>
+    <td>URL</td>
     <td>{{ object.url }}</td>
   </tr>
   <tr>
-    <th>Introduced</th>
+    <td>Introduced</td>
     <td>{{ object.introduced }}</td>
   </tr>
   <tr>
-    <th>Discontinued</th>
+    <td>Discontinued</td>
     <td>{{ object.discontinued }}</td>
   </tr>
   <tr>
-    <th>Negative size</th>
+    <td>Negative size</td>
     <td>{% if object.negative_size %}<a
         href="{% url 'negativesize-detail' object.negative_size.id %}">{{ object.negative_size }}</a>{% endif %}</td>
   </tr>
   <tr>
-    <th>Fixed mount</th>
+    <td>Fixed mount</td>
     <td>{{ object.fixed_mount }}</td>
   </tr>
   <tr>
-    <th>Notes</th>
+    <td>Notes</td>
     <td>{{ object.notes }}</td>
   </tr>
   <tr>
-    <th>Coating</th>
+    <td>Coating</td>
     <td>{{ object.coating }}</td>
   </tr>
   <tr>
-    <th>Hood</th>
+    <td>Hood</td>
     <td>{{ object.hood }}</td>
   </tr>
   <tr>
-    <th>Lens type</th>
+    <td>Lens type</td>
     <td>{{ object.exif_lenstype }}</td>
   </tr>
   <tr>
-    <th>Rectilinear</th>
+    <td>Rectilinear</td>
     <td>{{ object.rectilinear }}</td>
   </tr>
   <tr>
-    <th>Length</th>
+    <td>Length</td>
     <td>{{ object.length }}</td>
   </tr>
   <tr>
-    <th>Diameter</th>
+    <td>Diameter</td>
     <td>{{ object.diameter }}</td>
   </tr>
   <tr>
-    <th>Image circle</th>
+    <td>Image circle</td>
     <td>{{ object.image_circle }}</td>
   </tr>
   <tr>
-    <th>Formula</th>
+    <td>Formula</td>
     <td>{{ object.formula }}</td>
   </tr>
   <tr>
-    <th>Shutter model</th>
+    <td>Shutter model</td>
     <td>{{ object.shutter_model }}</td>
   </tr>
   <tr>
-    <th>Series</th>
+    <td>Series</td>
     <td>
       {% if object.series %}
       <ul>
