--- a/schema/templates/schema/list.html
+++ b/schema/templates/schema/list.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% load render_table from django_tables2 %}
+{% load model_name %}
 
 {% block heading %}{% include "heading.html" %}{%endblock%}
 
 {% block content %}
   {% if object_list %}
-    <p><a href="{{ request.path }}create">Add</a></p>
     {% render_table table %}
   {% else %}
-    <p>There are no objects in the list. <a href="{{ request.path }}create">Add one</a> now!</p>
+    <p>There are no objects in the list. <a href="{% url view.model|model_add %}">Add one</a> now!</p>
   {% endif %}       
 {% endblock %}
